src/objects/Verification_of_Benefits__c.object
<CustomObject>
    <fields>
        <fullName>Address_Line_1__c</fullName>
        <label>Address_Line_1</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Behavioral_ID__c</fullName>
        <label>Behavioral_ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <label>DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ins_Company__c</fullName>
        <label>Ins_Company</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ins_Phone__c</fullName>
        <label>Ins_Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last_Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medical_ID__c</fullName>
        <label>Medical_ID</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Policy_Type__c</fullName>
        <label>Policy_Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Commercial Insurance Co.</fullName>
                </value>
                <value>
                    <fullName>Dental Maintenance Organization</fullName>
                </value>
                <value>
                    <fullName>Disability</fullName>
                </value>
                <value>
                    <fullName>Exclusive Provider Organization (EPO)</fullName>
                </value>
                <value>
                    <fullName>Federal Employees Program</fullName>
                </value>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>HMO Medicare Risk;Indemnity Insurance</fullName>
                </value>
                <value>
                    <fullName>Liability Medical</fullName>
                </value>
                <value>
                    <fullName>Medicaid;Medicare Part A</fullName>
                </value>
                <value>
                    <fullName>Medicare Part B</fullName>
                </value>
                <value>
                    <fullName>Mutually Defined</fullName>
                </value>
                <value>
                    <fullName>Other Federal Program</fullName>
                </value>
                <value>
                    <fullName>Other Non-Federal Programs</fullName>
                </value>
                <value>
                    <fullName>Point of Service (POS)</fullName>
                </value>
                <value>
                    <fullName>Preferred Provider Organization (PPO)</fullName>
                </value>
                <value>
                    <fullName>Title V;TRICARE (CHAMPUS)</fullName>
                </value>
                <value>
                    <fullName>Veterans Affairs Plan</fullName>
                </value>
                <value>
                    <fullName>Workers’ Compensation Health Claim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <label>Relationship</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Child</fullName>
                </value>
                <value>
                    <fullName>Spouse</fullName>
                </value>
                <value>
                    <fullName>Self</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sex__c</fullName>
        <label>Sex</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Addr_Line_1__c</fullName>
        <label>Sub_Addr_Line_1</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_City__c</fullName>
        <label>Sub_City</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_DOB__c</fullName>
        <label>Sub_DOB</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sub_First_Name__c</fullName>
        <label>Sub_First_Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Last_Name__c</fullName>
        <label>Sub_Last_Name</label>
        <length>20</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sub_Phone__c</fullName>
        <label>Sub_Phone</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Sub_Sex__c</fullName>
        <label>Sub_Sex</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_State__c</fullName>
        <label>Sub_State</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sub_Zip__c</fullName>
        <label>Sub_Zip</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Verification of Benefits</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>VOB Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Verification of Benefits</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>